--- a/Ecu911/Shared/_EmptyLayout.razor
+++ b/Ecu911/Shared/_EmptyLayout.razor
@@ -35,8 +35,9 @@
 <MudThemeProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
+
 @code {
     private string usuario = " ", password = "", TextValue = "", _tokenModel = "";
-    User model = new User();
+    //User model = new User();
 }
 
