--- a/Ecu911/_Imports.razor
+++ b/Ecu911/_Imports.razor
@@ -10,3 +10,12 @@
 @using Ecu911
 @using Ecu911.Shared
 @using Ecu911.Modelos
+@using Ecu911.Servicios
+
+@using System.Threading.Tasks
+@using System.Text.Json
+@using System.Text.Json.Serialization
+@inject IHttpClientFactory ClientFactory
+@inject HttpClient Http
+
+@*@inject Servicios.Servicios_Api.Servicios_Api*@
