--- a/Ecu911/Pages/Index.razor
+++ b/Ecu911/Pages/Index.razor
@@ -7,44 +7,23 @@
 <MudText Typo="Typo.h3" GutterBottom="true">Procesos Activos</MudText>
 <MudText Class="mb-8">Tus procesos son:</MudText>
 
-@if (todoItems == null)
+@if (Procesos == null)
 {
     <p>No Todo Items found.</p>
 }
 else
 {
     <ul>
-        @foreach (var item in todoItems)
+        @foreach (var item in Procesos)
         {
-            <li>@item.numProceso</li>
-            <li>@item.cpc</li>
             <li>@item.Planta</li>
         }
     </ul>
 }
 
 @code {
+    private ProcesoCompra[]? Procesos;
 
-    private List<ProcesoCompra>? todoItems = new();
-
-    protected override async Task OnInitializedAsync() => 
-        todoItems = await Http.GetFromJsonAsync<List<ProcesoCompra>>("https://localhost:7167/api/ProcesoCompra");
-
-    //     protected async Task GetAmbulanciasAsync()
-    //{
-    //    await apiService.SetAuthHeaders();
-    //    var response = await apiService.HttpClient.GetAsync("ambulancias?ToRegister=true");
-    //    try
-    //    {
-    //        response.EnsureSuccessStatusCode();
-    //        ambulancias = await response.Content.ReadFromJsonAsync<List<ProcesoCompra>>(EncodingHelper.WithReferences());
-    //    }
-    //    catch (HttpRequestException)
-    //    {
-
-    //    }
-    //}
-
-
-}
+    protected override async Task OnInitializedAsync() =>
+        Procesos = await Http.GetFromJsonAsync<ProcesoCompra[]>("Api/ProcesoCompra");
 }
