--- a/Ecu911/_Imports.razor
+++ b/Ecu911/_Imports.razor
@@ -12,10 +12,12 @@
 @using Ecu911.Modelos
 @using Ecu911.Servicios
 
+@using System.Net.Http.Json
 @using System.Threading.Tasks
 @using System.Text.Json
 @using System.Text.Json.Serialization
 @inject IHttpClientFactory ClientFactory
 @inject HttpClient Http
+
 
 @*@inject Servicios.Servicios_Api.Servicios_Api*@
