--- a/Ecu911/_Imports.razor
+++ b/Ecu911/_Imports.razor
@@ -18,6 +18,7 @@
 @using System.Text.Json.Serialization
 @inject IHttpClientFactory ClientFactory
 @inject HttpClient Http
-
+@inject ISnackbar snackBar
+@inject ApiService apiService
 
 @*@inject Servicios.Servicios_Api.Servicios_Api*@
