--- a/Ecu911/Pages/EtapaPreContractual.razor
+++ b/Ecu911/Pages/EtapaPreContractual.razor
@@ -10,8 +10,6 @@
     </MudItem>
 
     <MudItem xs="10" sm="4" md="4">
-
-       @* // Decimal x que no double*@
             <MudNumericField Immediate="false" HideSpinButtons="true" Label="Valor adjudicadao(con IVA)" Format="N2" T="Decimal" @bind-Value="registro.valorAdjudicado" HelperText="registro.valorAdjudicado"  />
     </MudItem>
 
@@ -22,7 +20,17 @@
 </MudGrid>
 </EditForm>
 <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
-    <MudButton Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">Guardar</MudButton>
+    <MudButton Disabled="@_procesando" OnClick="Subir" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">
+        @if (_procesando)
+        {
+            <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
+            <MudText Class="ms-2">Procesando</MudText>
+        }
+        else
+        {
+            <MudText> Guardar</MudText>
+        }
+    </MudButton>
 </MudContainer>
 
 
@@ -31,11 +39,53 @@
     public double? _valueEn = 0000.00;
     private string value1 = " ", value2 = "", TextValue = "";
 
+    private bool _procesando = false;
 
-    protected override async Task OnInitializedAsync()
+    private  async Task ProcessSomething()
     {
-    } 
+        _procesando = true;
+        await Task.Delay(2000);
+        _procesando = false;
+    }
 
+
+
+    protected async void Subir()
+    {
+        Precontractual procesos = new();
+
+        HttpResponseMessage? response = new();
+
+        try
+        {
+            //'Serialization and deserialization of 'System.DateOnly' instances are not supported. Path: $.fechaAdjudicacion.'
+            //NotSupportedException: Serialization and deserialization of 'System.DateOnly' instances are not supported.
+
+
+            response = await apiService.HttpClient.PostAsJsonAsync("Precontractual", registro);
+        }
+        catch (HttpRequestException)
+        {
+            var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
+            snackBar.Add($"{data.Message}", Severity.Error);
+        }
+        try
+        {
+            response.EnsureSuccessStatusCode();
+            var data = await response.Content.ReadFromJsonAsync<CreatedResponse>();
+            snackBar.Add("Proceso agregado!", Severity.Success);
+
+        }
+        catch (HttpRequestException)
+        {
+            var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
+            snackBar.Add($"{data.Message}", Severity.Error);
+        }
+
+
+        await ProcessSomething();
+
+    }
 
 }
 
