--- a/Ecu911/Pages/EtapaPreparatoria.razor
+++ b/Ecu911/Pages/EtapaPreparatoria.razor
@@ -45,7 +45,19 @@
 </MudGrid>
 </EditForm>
 <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
-    <MudButton Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">Guardar</MudButton>
+    <MudButton Disabled="@_procesando" OnClick="Subir" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">
+        @if (_procesando)
+        {
+            <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
+            <MudText Class="ms-2">Procesando</MudText>
+        }
+        else
+        {
+            <MudText> Guardar</MudText>
+        }
+
+
+    </MudButton>
 </MudContainer>
 @code {
     Preparatoria registro = new();
@@ -54,5 +66,48 @@
     private string value1 = " ", value2 = "", TextValue = "";
 
     //public string TextValue { get; set; }
+    private bool _procesando = false;
+
+    private async Task ProcessSomething()
+    {
+        _procesando = true;
+        await Task.Delay(2000);
+        _procesando = false;
+    }
+
+    protected async void Subir()
+    {
+        Preparatoria procesos = new();
+
+        HttpResponseMessage? response = new();
+
+        try
+        {
+
+        //NotSupportedException: Serialization and deserialization of 'System.DateOnly' instances are not supported.
+
+            response = await apiService.HttpClient.PostAsJsonAsync("Preparatoria", registro);
+        }
+        catch (HttpRequestException)
+        {
+            var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
+            snackBar.Add($"{data.Message}", Severity.Error);
+        }
+        try
+        {
+            response.EnsureSuccessStatusCode();
+            var data = await response.Content.ReadFromJsonAsync<CreatedResponse>();
+            snackBar.Add("Proceso agregado!", Severity.Success);
+
+        }
+        catch (HttpRequestException)
+        {
+            var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
+            snackBar.Add($"{data.Message}", Severity.Error);
+        }
+
+        await ProcessSomething();
+
+    }
 
 }
